:construction: feat: Construindo os elementos da calculadora

--- a/index.html
+++ b/index.html
@@ -13,6 +13,42 @@
     <script src="assets/js/main.js" defer></script>
 </head>
 <body>
+    <main>
+        <h1 class="principal__title head">Spli</h1>
+        <h1 class="principal__title">tter</h1>
+       
+        <div class="container__calculator">
+            <section class="container__content">
+                <span class="bill__text">Bill</span>
+                <input type="number" class="bill__number">
+                <span class="tip__text">Select Tip %</span>
+                <div class="tips__container">
+                    <button class="btn-tip-5">5%</button>
+                    <button class="btn-tip-10">10%</button>
+                    <button class="btn-tip-15">15%</button>
+                    <button class="btn-tip-25">25%</button>
+                    <button class="btn-tip-50">50%</button>
+                    <input type="number" class="custom__tip">
+                </div>
+                <span class="people__text">Number of people</span>
+                <input type="number" class="people__number">
+            </section>
+
+            <section class="container__results">
+                <div class="results__content">
+                    <div class="tip__content">
+                        <span class="results__text">Tip Amount</span>
+                        <span class="person__text">/ person</span>
+                    </div>
+                    <div class="total__content">
+                        <span class="results__text">Total</span>
+                        <span class="person__text">/ person</span>
+                    </div>
+                </div>
+                <button class="btn-reset">Reset</button>
+            </section>
+        </div>
+    </main>
     
 </body>
 </html>
