:lipstick: feat: Estilizando a primeira section da calculadora

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
 <body>
     <main>
         <h1 class="principal__title head">Spli</h1>
-        <h1 class="principal__title">tter</h1>
+        <h1 class="principal__title bottom">tter</h1>
        
         <div class="container__calculator">
             <section class="container__content">
                 <span class="bill__text">Bill</span>
-                <input type="number" class="bill__number">
+                <input type="number" class="bill__number" placeholder="0" onfocus="this.placeholder=''" onblur="this.placeholder='0'">
                 <span class="tip__text">Select Tip %</span>
                 <div class="tips__container">
                     <button class="btn-tip-5">5%</button>
