:construction: feat: Construindo a funcionalidade principal da calculadora.

--- a/index.html
+++ b/index.html
@@ -23,15 +23,16 @@
                 <input type="number" class="bill__number" placeholder="0" onfocus="this.placeholder=''" onblur="this.placeholder='0'">
                 <span class="tip__text">Select Tip %</span>
                 <div class="tips__container">
-                    <button class="btn-tip-5">5%</button>
-                    <button class="btn-tip-10">10%</button>
-                    <button class="btn-tip-15">15%</button>
-                    <button class="btn-tip-25">25%</button>
-                    <button class="btn-tip-50">50%</button>
+                    <button class="btn-tip">5%</button>
+                    <button class="btn-tip">10%</button>
+                    <button class="btn-tip">15%</button>
+                    <button class="btn-tip">25%</button>
+                    <button class="btn-tip">50%</button>
                     <input type="number" class="custom__tip" placeholder="Custom" onfocus="this.placeholder=''" onblur="this.placeholder='Custom'">
                 </div>
                 <span class="people__text">Number of people</span>
                 <input type="number" class="people__number" placeholder="0" onfocus="this.placeholder=''" onblur="this.placeholder='0'">
+                <span class="alert__error">Can't be zero</span>
             </section>
 
             <section class="container__results">
