:bug: fix: Corrigindo bug visual do valor total.

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                     </div>
                     <span class="tip-amount-result">$0.00</span>
                     <div class="total__content">
-                        <span class="results__text">Total</span>
-                        <span class="person__text">/ person</span>
+                        <span class="results__text end-text">Total</span>
+                        <span class="person__text end-text">/ person</span>
                     </div>
                     <span class="total-result">$0.00</span>
                 </div>
